# 4BIGD

./: README.MD
hadoop-master/: entrypoint.sh  hadoop-env.sh
pyspark/: Dockerfile  data_validator.py  dataset_downloader.py  hdfs_manager.py  main.py  pipeline.py  pyproject.toml
